Remove more wrong tests that will be fixed later on, fix checkstyle
Fix checkstyle